<resources>
    <string name="app_name">CricketScore</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="wd">WD</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="nb">NB</string>
    <string name="_2">2</string>
    <string name="_6">6</string>
    <string name="bye">BYE</string>
    <string name="undo">UNDO</string>
    <string name="_5_7">5,7</string>
    <string name="out">OUT</string>
    <string name="lb">LB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_boards_are_available">No matches are there.</string>
    <string name="enter_name">Enter name</string>
    <string name="submit">Submit</string>
    <string name="name">Name - </string>
    <string name="update">Update</string>
    <string name="batting_team">Batting Team</string>
    <string name="bowling_team">Bowling Team</string>
    <string name="loading">Please wait</string>
    <string name="cancel">Cancel</string>
    <string name="name_">Name</string>
    <string name="runs">Runs</string>
    <string name="balls">Balls</string>
    <string name="wicket_reason">W. Reason</string>
    <string name="strike_rate">SR</string>
    <string name="extras">Extras</string>
    <string name="economy">Economy</string>
    <string name="wickets">Wickets</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="select_player">Select Bowler</string>
    <string name="exit">Exit</string>
    <string name="match_over">Match Over!</string>
    <string name="declare">Declare</string>
    <string name="bowling_time_line">Bowling Time line</string>
    <string name="__">/</string>
    <string name="overs">Overs</string>
    <string name="share">Share</string>
</resources>